--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,21 @@
         });
       });
     </script>-->
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <!--<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
       window.OneSignal = window.OneSignal || [];
       OneSignal.push(function() {
         OneSignal.init({
           appId: "8bf69126-a437-413c-813a-6b1afd49c58c",
+        });
+      });
+    </script>-->
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "656eb005-c501-40bf-9756-35a884dd2237",
         });
       });
     </script>
